Update file_locations,_logging,_and_common_hdfs_commands.md